--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <span class="elem__text"> Enter your email address </span>
               </div>
               <input
+                id="inp"
+                name="email"
                 type="text"
                 class="elem__input"
                 placeholder="team@checkforpatent.com"
@@ -41,7 +43,9 @@
                   </span>
                 </div>
                 <input
+                  name="product"
                   type="text"
+                  id="inp"
                   class="elem__input"
                   placeholder="for example, sylicon wine cup"
                 />
@@ -52,6 +56,8 @@
                     </span>
                   </div>
                   <input
+                    id="inp"
+                    name="url"
                     type="text"
                     class="elem__input"
                     placeholder="https://..."
