--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <input
                 id="inp"
                 name="email"
-                type="text"
+                type="email"
                 class="elem__input"
                 placeholder="team@checkforpatent.com"
               />
